# quantaquill_clone

./: .env  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_research.py  run_writing.py
agents/: citation_agent.py  research_agent.py  writing_agent.py
backend/: main.py  pipeline.py
backend/agents/: base_agent.py  citation_agent.py  research_agent.py  writing_agent.py
backend/data/: draft_sections.json  knowledge_graph.json  research_output.json
backend/manager/: coordinator.py
backend/output/: abstract.md  conclusion.md  experiments.md  full_paper.md  introduction.md  methodology.md  references.md  results.md
backend/symbolic/: knowledge_graph.py
backend/validators/: paper_validator.py
data/: draft_sections.json  knowledge_graph.json  research_output.json
frontend/: app.py
manager/: coordinator.py
output/: abstract.md  conclusion.md  experiments.md  full_paper.md  introduction.md  methodology.md  references.md  results.md  validation_report.txt
symbolic/: graph_rules.py
